update author name

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "Apache-2.0",
     "authors": [
         {
-            "name": "ryan",
+            "name": "mlym",
             "email": "43352901@qq.com"
         }
     ],
