--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,44 @@
 {
-  "name": "mlym/wise-generator-easyswoole",
-  "description": "A code generator for EasySwoole",
-  "license": "Apache-2.0",
-  "authors": [
-    {
-      "name": "mlym",
-      "email": "43352901@qq.com"
-    }
-  ],
-  "require": {
-    "easyswoole/trigger": "^1.0",
-    "easyswoole/socket": "^1.0",
-    "easyswoole/orm": "^1.4",
-    "nette/php-generator": "^3.2",
-    "easyswoole/http-annotation": "^2.0",
-    "php-curl-class/php-curl-class": "^8.5",
-    "easyswoole/command": "^1.1",
-    "ext-json": "*"
-  },
-  "minimum-stability": "dev",
-  "autoload": {
-    "psr-4": {
-      "Mlym\\CodeGeneration\\": "src/",
-      "App\\": "App/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "EasySwoole\\CodeGeneration\\Test\\": "Tests/",
-      "EasySwoole\\CodeGeneration\\UnitTest\\": "UnitTest/",
-      "App\\": "App/",
-      "UnitTest\\": "UnitTest/"
-    }
-  },
-  "require-dev": {
-    "easyswoole/easyswoole": "^3.3",
-    "easyswoole/swoole-ide-helper": "^1.2",
-    "easyswoole/phpunit": "^1.0"
-  },
-  "bin": [
-    "bin/wise-generator-easyswoole"
-  ]
+    "name": "mlym/wise-generator-easyswoole",
+    "description": "wise generator for EasySwoole",
+    "license": "Apache-2.0",
+    "authors": [
+        {
+            "name": "mlym",
+            "email": "43352901@qq.com"
+        }
+    ],
+    "require": {
+        "easyswoole/trigger": "^1.0",
+        "easyswoole/socket": "^1.0",
+        "easyswoole/orm": "^1.4",
+        "nette/php-generator": "^3.2",
+        "easyswoole/http-annotation": "^2.0",
+        "php-curl-class/php-curl-class": "^8.5",
+        "easyswoole/command": "^1.1",
+        "ext-json": "*"
+    },
+    "minimum-stability": "dev",
+    "autoload": {
+        "psr-4": {
+            "Mlym\\CodeGeneration\\": "src/",
+            "App\\": "App/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "EasySwoole\\CodeGeneration\\Test\\": "Tests/",
+            "EasySwoole\\CodeGeneration\\UnitTest\\": "UnitTest/",
+            "App\\": "App/",
+            "UnitTest\\": "UnitTest/"
+        }
+    },
+    "require-dev": {
+        "easyswoole/easyswoole": "^3.3",
+        "easyswoole/swoole-ide-helper": "^1.2",
+        "easyswoole/phpunit": "^1.0"
+    },
+    "bin": [
+        "bin/wise-generator-easyswoole"
+    ]
 }
